--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>jquery.quadgram</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="dist/jquery.quadgram.min.css">
+	<link rel="stylesheet" href="/dist/jquery.quadgram.min.css">
 	<style>
 		/* Custom styling / overrides */
 		.custom {
@@ -133,7 +133,7 @@
 
 <!-- VENDOR -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
-<script src="dist/jquery.quadgram.min.js"></script>
+<script src="/dist/jquery.quadgram.min.js"></script>
 <script>
 	$(document).ready(function(){
 		$('#diagram').quadrants({
